--- a/src/assets/scss/utils/_mixins.scss
+++ b/src/assets/scss/utils/_mixins.scss
@@ -1,6 +1,80 @@
-// Example Mixin for Media Queries
-@mixin responsive($breakpoint) {
-  @media (max-width: $breakpoint) {
-    @content;
+// / Media query mixin 
+@mixin bp($query) {
+  @if $query==desktop-lg {
+    @media (min-width: 1600px) {
+      @content;
+    }
+  }
+
+  @else if $query==desktop-lg-max {
+    @media (max-width: 1599px) {
+      @content;
+    }
+  }
+
+  @else if $query==desktop-md {
+    @media (min-width: 1200px) {
+      @content;
+    }
+  }
+
+  @else if $query==desktop-sm {
+    @media (max-width: 1200px) {
+      @content;
+    }
+  }
+
+  @else if $query==tablet-md {
+    @media (min-width: 992px) {
+      @content;
+    }
+  }
+
+  @else if $query==foundation-tablet-sm {
+    @media (max-width: 1023px) {
+      @content;
+    }
+  }
+
+  @else if $query==tablet-sm {
+    @media (max-width: 991px) {
+      @content;
+    }
+  }
+
+  @else if $query==tablet-strict {
+    @media (min-width: 768px) and (max-width: 991px) {
+      @content;
+    }
+  }
+
+  @else if $query==tablet {
+    @media (min-width: 768px) {
+      @content;
+    }
+  }
+
+  @else if $query==mobile {
+    @media (max-width: 767px) {
+      @content;
+    }
+  }
+
+  @else if $query==sm {
+    @media (max-width: 575px) {
+      @content;
+    }
+  }
+
+  @else if $query==sm {
+    @media (max-width: 575px) {
+      @content;
+    }
+  }
+
+  @else if $query==xs {
+    @media (max-width: 320px) {
+      @content;
+    }
   }
 }
