css in home in progerss

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,5 +9,5 @@
 
 //Component Styles
 // @import './components/header';
-// @import './components/sidebar';
+@import './components/sidebar';
 // @import './components/movieCard';
