css in progress

--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+input[type="text"] {
+  outline: 0;
+  border: none;
+  background-color: transparent;
+  color: $text-color;
+
+}
+
 section.main {
   min-height: 100vh;
   // padding: 50px 60px 20px;
