--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -10,4 +10,4 @@
 //Component Styles
 // @import './components/header';
 @import './components/sidebar';
-// @import './components/movieCard';
+@import './components/searchbar';
