--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -9,7 +9,46 @@ aside.sidebar {
     font-family: $secondary-family;
     font-weight: 800;
     text-transform: capitalize;
+    margin-bottom: 20px;
   }
+
+  .menu_list {
+    ul {
+      margin-top: 40px;
+      margin-bottom: 30px;
+
+      li {
+
+        a {
+          padding: 11px;
+          font-size: 16px;
+          line-height: 19px;
+          border-radius: 6px;
+          width: 100%;
+          display: flex;
+          align-items: center;
+
+
+          img {
+            margin-right: 14px;
+          }
+
+          &:hover {
+            background-color: #1f1f1f;
+          }
+        }
+
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
+
+
+      }
+
+    }
+  }
+
+
 }
 
 .right_common {
