sidebar css completed

--- a/src/assets/scss/components/_searchbar.scss
+++ b/src/assets/scss/components/_searchbar.scss
@@ -1,5 +1,5 @@
 .search_box {
-  border: 1px solid $lst-color;
+  border: 1px solid $inp-color;
   border-radius: 6px;
   padding: 7px 12px;
   column-gap: 17px;
