--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -11,3 +11,6 @@
 // @import './components/header';
 @import './components/sidebar';
 @import './components/searchbar';
+@import './components/button';
+@import './components/watchlist';
+@import './components/siderbar/userprofile';
