--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -9,8 +9,9 @@ $secondary-color: #141414;
 $text-color: #E1E1E1;
 $bg-color: #363636;
 $lst-color:#9A9A9A;
-$inp-color:#D9D9D9;
+$inp-color:#414141;
 $bg-black:#000000;
+$magic-black:#141414;
 
 
 
