--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -1,4 +1,5 @@
 aside.sidebar {
+  position: relative;
   width: 320px;
   padding: 20px 40px;
   background-color: $bg-black;
@@ -47,6 +48,7 @@ aside.sidebar {
 
     }
   }
+
 
 
 }
