--- a/src/assets/scss/components/login/_login.scss
+++ b/src/assets/scss/components/login/_login.scss
@@ -72,7 +72,8 @@
         }
       }
 
-      :focus-within label {
+      :focus-within label,
+      input:not(:placeholder-shown)+label {
         top: 8px;
         font-size: 12px;
 
