--- a/src/assets/scss/components/login/_login.scss
+++ b/src/assets/scss/components/login/_login.scss
@@ -26,11 +26,12 @@
     margin: 0 auto;
 
     .form-group {
+      position: relative;
       border: 1px solid;
       border-color: rgba(128, 128, 128, 0.7);
       border-radius: 6px;
       padding: 0px 12px;
-      margin-bottom: 18px;
+      margin-bottom: 25px;
       background: rgba(22, 22, 22, 0.7);
 
       &:focus-within {
@@ -78,6 +79,16 @@
         font-size: 12px;
 
         /* Optional: Change label color on focus */
+      }
+
+      span {
+
+        display: inline-block;
+        position: absolute;
+        top: 100%;
+        font-size: 13px;
+        color: red;
+
       }
     }
   }
