--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,3 +15,4 @@
 @import './components/watchlist';
 @import './components/siderbar/userprofile';
 @import './components/login/login';
+@import './components/pages/home';
