--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -12,10 +12,7 @@ $lst-color:#9A9A9A;
 $inp-color:#414141;
 $bg-black:#000000;
 $magic-black:#141414;
-
-
-
-// Fonts
+$ruby-red:#A41B1B; // Fonts
 $htmlFontSize: 16px;
 $baseFontSize: 16px;
 
