--- a/src/assets/scss/components/pages/_home.scss
+++ b/src/assets/scss/components/pages/_home.scss
@@ -43,4 +43,37 @@ section.movies_section {
     color: $text-color;
     margin-bottom: 35px;
   }
+
+  .mov_card {
+    position: relative;
+    min-width: 150px;
+    min-height: 320px;
+    border-radius: 0px;
+    background-color: #1f1f1f;
+
+    span {
+      img {
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+
+    img.card-img-top {
+      width: 100%;
+      height: 225px;
+    }
+
+    .card-title {
+      padding: 15px 10px 0;
+      font-size: 16px;
+      line-height: 19px;
+      color: $text-color;
+
+      span {
+        font-weight: 100;
+        display: block;
+      }
+    }
+  }
 }
