--- a/src/assets/scss/components/pages/_home.scss
+++ b/src/assets/scss/components/pages/_home.scss
@@ -44,37 +44,81 @@ section.movies_section {
     margin-bottom: 35px;
   }
 
-  .mov_card {
-    overflow: hidden;
+  .card-main {
     position: relative;
-    min-width: 150px;
-    min-height: 320px;
-    border-radius: 0px;
-    background-color: #1f1f1f;
+    column-gap: 60px;
 
-    span {
-      img {
-        position: absolute;
-        top: 0;
-        left: 0;
+    
+
+
+    .mov_card {
+      flex: 0 0 calc(100% / 6 - 10px);
+      overflow: hidden;
+      position: relative;
+      min-width: 150px;
+      min-height: 320px;
+      border-radius: 0px;
+      background-color: #1f1f1f;
+      transition: transform 0.5s ease;
+
+
+
+      span {
+        img {
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+      }
+
+      img.card-img-top {
+        width: 100%;
+        height: 225px;
+      }
+
+      .card-title {
+        padding: 15px 10px 0;
+        font-size: 16px;
+        line-height: 19px;
+        color: $text-color;
+
+        span {
+          font-weight: 100;
+          display: block;
+        }
       }
     }
 
-    img.card-img-top {
-      width: 100%;
-      height: 225px;
-    }
+    .carousel-btn {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      padding: 10px;
+      cursor: pointer;
+      z-index: 10;
 
-    .card-title {
-      padding: 15px 10px 0;
-      font-size: 16px;
-      line-height: 19px;
-      color: $text-color;
+      &:disabled {
+        background-color: rgba(0, 0, 0, 0.2);
+        cursor: not-allowed;
+      }
 
-      span {
-        font-weight: 100;
-        display: block;
+      &.prev {
+        left: 10px;
+      }
+
+      &.next {
+        right: 10px;
       }
     }
   }
+
+  .card-main[style*="translateX"] {
+    transform: translateX(calc(-100% / 5 * var(--offset, 0)));
+    /* Adjust for visible cards */
+  }
 }
+
