--- a/src/assets/scss/components/pages/_home.scss
+++ b/src/assets/scss/components/pages/_home.scss
@@ -37,6 +37,8 @@ section.search_box_2 {
 }
 
 section.movies_section {
+  overflow-x: hidden;
+
   h2 {
     font-size: 32px;
     line-height: 38px;
@@ -47,20 +49,17 @@ section.movies_section {
   .card-main {
     position: relative;
     column-gap: 60px;
-
-    
-
+    overflow: hidden;
+    // scroll-snap-type: x proximity;
 
     .mov_card {
       flex: 0 0 calc(100% / 6 - 10px);
-      overflow: hidden;
       position: relative;
       min-width: 150px;
       min-height: 320px;
       border-radius: 0px;
       background-color: #1f1f1f;
-      transition: transform 0.5s ease;
-
+      transition: all 0.5s ease;
 
 
       span {
@@ -121,4 +120,3 @@ section.movies_section {
     /* Adjust for visible cards */
   }
 }
-
