skimmer effected added

--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -12,7 +12,13 @@ $lst-color:#9A9A9A;
 $inp-color:#414141;
 $bg-black:#000000;
 $magic-black:#141414;
-$ruby-red:#A41B1B; // Fonts
+$ruby-red:#A41B1B;
+$skimmer-color: rgba(255, 255, 255, 0.13);
+
+
+
+
+// Fonts
 $htmlFontSize: 16px;
 $baseFontSize: 16px;
 
