create form in progress

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -16,3 +16,5 @@
 @import './components/siderbar/userprofile';
 @import './components/login/login';
 @import './components/pages/home';
+@import './components/pages/createwatchlist';
+@import './components/form/formrinputs';
