createplaylist page  in progress

--- a/src/assets/scss/components/form/_formrinputs.scss
+++ b/src/assets/scss/components/form/_formrinputs.scss
@@ -28,7 +28,7 @@
         border-radius: 6px;
         background-color: transparent;
         color: $text-color;
-
+        padding: 7px;
       }
     }
   }
