--- a/src/assets/scss/components/pages/_home.scss
+++ b/src/assets/scss/components/pages/_home.scss
@@ -63,6 +63,7 @@ section.movies_section {
 
 
       span {
+        cursor: pointer;
         img {
           position: absolute;
           top: 0;
