--- a/src/assets/scss/components/pages/_home.scss
+++ b/src/assets/scss/components/pages/_home.scss
@@ -61,9 +61,33 @@ section.movies_section {
       background-color: #1f1f1f;
       transition: all 0.5s ease;
 
+      p.ratings {
+        padding-inline: 10px;
+        display: flex;
+        justify-content: end;
+        align-items: center;
+        margin-top: 5px;
+
+        span {
+          padding: 0 2px 0 8px;
+
+        }
+
+        img {
+          height: 19px;
+          width: 21px;
+        }
+
+        sup {
+          font-size: 10px;
+          line-height: 12px;
+          font-weight: 200;
+        }
+      }
 
       span {
         cursor: pointer;
+
         img {
           position: absolute;
           top: 0;
@@ -77,7 +101,7 @@ section.movies_section {
       }
 
       .card-title {
-        padding: 15px 10px 0;
+        padding: 5px 10px 0;
         font-size: 16px;
         line-height: 19px;
         color: $text-color;
