--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -84,3 +84,91 @@
 
   }
 }
+
+.poster {
+  img {
+    border-radius: 6px;
+  }
+}
+
+.poster-details {
+
+  margin-top: 30px;
+
+  h1 {
+    font-size: 36px;
+    line-height: 43px;
+    color: $text-color;
+    font-weight: 700;
+    margin-bottom: 10px;
+
+    span {
+      font-weight: 200;
+    }
+  }
+
+  .category {
+    ul {
+      display: flex;
+      column-gap: 30px;
+    }
+
+    li {
+
+      &:not(:first-child) {
+        list-style-type: disc;
+      }
+    }
+  }
+
+  h2 {
+    font-size: 20px;
+    line-height: 24px;
+    color: $text-color;
+    font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 10px;
+  }
+
+  .cast {
+    margin-top: 20px;
+    margin-bottom: 45px;
+
+    span {
+      margin-right: 5px;
+    }
+  }
+
+  .rating_box {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 90px;
+
+    p {
+      width: 81px;
+      height: 95px;
+      display: flex;
+      font-size: 36px;
+      line-height: 43px;
+      font-weight: bold;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      color: $primary-color;
+      border-radius: 8px;
+      padding: 15px 10px;
+      border: 1px solid $ruby-red;
+      background-color: rgba(217, 217, 217, 0.1);
+
+      span {
+        display: inline-block;
+        font-size: 20px;
+        line-height: 24px;
+        font-weight: bold;
+        color: $text-color;
+        margin-bottom: 5px;
+      }
+    }
+  }
+}
