css in progress for form

--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -98,6 +98,14 @@ button.slick-arrow {
 .fields {
   position: relative;
 
+  label {
+    span {
+      display: inline-block;
+      margin-left: 5px;
+      color: $bg-color;
+    }
+  }
+
   input {}
 
   .errorMsg {
