resolved menu popup

--- a/src/assets/scss/components/pages/_home.scss
+++ b/src/assets/scss/components/pages/_home.scss
@@ -29,6 +29,7 @@ section.search_box_2 {
   .search_box {
     width: 100%;
     justify-content: start !important;
+    margin-right: 8px;
 
     input {
       width: 100%;
