--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -21,10 +21,15 @@
         display: flex;
         justify-content: start;
         align-items: center;
+        text-transform: capitalize;
 
         img {
-          margin-right: 17px;
+          margin-right: 10px;
         }
+      }
+
+      &:not(:last-child) {
+        margin-bottom: 8px;
       }
     }
   }
@@ -61,19 +66,33 @@
 
       ul {
         width: 100%;
-
+        max-height: 160px;
+        overflow-y: auto;
 
         li {
           padding: 5px 12px 5px;
           border-top: 1px solid;
 
-          // &:first-child {
-          //   border-top: 1px solid;
-          // }
 
-          // &:not(first-child) {
-          //   border-bottom: 1px solid;
-          // }
+        }
+
+        &::-webkit-scrollbar {
+          width: 8px;
+        }
+
+        &::-webkit-scrollbar-track {
+          background: #363636;
+          border-radius: 4px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+          background: #686868;
+          /* Bright Red */
+          border-radius: 4px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+          background: #686868;
         }
       }
 
