--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -68,13 +68,18 @@
         width: 100%;
         max-height: 160px;
         overflow-y: auto;
+        border-top: 1px solid hsla(0, 0%, 100%, .1);
 
         li {
           padding: 5px 12px 5px;
-          border-top: 1px solid;
 
 
+          &:hover {
+            background-color: hsla(0, 0%, 100%, .28%);
+
+          }
         }
+
 
         &::-webkit-scrollbar {
           width: 8px;
