--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -195,7 +195,9 @@
   }
 }
 
-.watchlist_page {
+// ------------------watchlist_page----------------------//
+
+section.watchlist_page {
   .editbtn {
 
     display: flex;
@@ -224,6 +226,58 @@
       font-weight: 300;
     }
   }
+
+  .stats_details {
+    margin-top: 70px;
+    display: grid;
+    // grid-template-columns: repeat(auto-fill, minmax(min(180px, 250px), 1fr));
+    grid-template-columns: min(168px, 100%) 250px min(190px, 100%);
+    gap: 40px;
+
+    div {
+      border-radius: 8px;
+      padding: 15px 10px;
+      border: 1px solid $ruby-red;
+      background-color: rgba(217, 217, 217, 0.1);
+      text-align: center;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      row-gap: 20px;
+      flex-wrap: wrap;
+
+
+      p {
+        font-size: 20px;
+        line-height: 24px;
+        font-weight: bold;
+        color: $text-color;
+        margin-bottom: 5px;
+
+      }
+
+      span {
+        display: inline-block;
+        font-size: 36px;
+        line-height: 43px;
+        font-weight: bold;
+        color: $primary-color;
+
+      }
+    }
+  }
+
+  .movies_section {
+    margin-top: 70px;
+
+    .slider-container {
+
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(min(150px, 100%), 1fr));
+      column-gap: 60px;
+    }
+  }
+
 }
 
 .editpage_title {
