--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -271,10 +271,11 @@ section.watchlist_page {
     margin-top: 70px;
 
     .slider-container {
-
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(min(150px, 100%), 1fr));
-      column-gap: 60px;
+      column-gap: 50px;
+      row-gap: 50px;
+
     }
   }
 
