--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -313,9 +313,16 @@ section.editmovie_list {
       justify-content: space-between;
       align-items: center;
       border: 1px solid $text-color;
-      padding: 17px 17px 17px 0px;
+      padding: 17px 17px 17px 17px;
       column-gap: 10px;
       border-radius: 4px;
+
+      img {
+        height: 32px;
+        width: 32px;
+        border-radius: 50%;
+        margin-right: 8px;
+      }
 
 
       .remove_btn {
