working on delete watchlist pop up

--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -307,6 +307,27 @@ section.watchlist_page {
 }
 
 // ------------------Editwatchlist_page----------------------//
+.editpage_title {
+  .modalup {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: black;
+
+    div#myPopover {
+      position: fixed;
+      top: 50%;
+      right: 50%;
+      z-index: 1;
+      background-color: aliceblue;
+      color: black;
+    }
+  }
+}
+
 section.editmovie_list {
 
   ul {
@@ -345,6 +366,7 @@ section.editmovie_list {
 
 
     }
+
 
 
   }
