--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -30,6 +30,15 @@ p {
 section.main {
   min-height: 100vh;
   // padding: 50px 60px 20px;
+
+  // &.modalup {
+  //   position: absolute;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
+  //   background-color: black;
+  // }
 }
 
 .slick-track {
