--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -309,21 +309,70 @@ section.watchlist_page {
 // ------------------Editwatchlist_page----------------------//
 .editpage_title {
   .modalup {
+    display: flex;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 9999;
-    background-color: black;
+    background-color: rgba(0, 0, 0, .5);
+    align-items: center;
+    overflow: hidden;
+    transition: opacity .3s linear;
+    opacity: 0;
+
+
 
     div#myPopover {
-      position: fixed;
-      top: 50%;
-      right: 50%;
-      z-index: 1;
+      // position: fixed;
+      // top: 50%;
+      // right: 50%;
+      // z-index: 1;
+      border-radius: 8px;
       background-color: aliceblue;
       color: black;
+      transition: opacity .3s linear, transform .3s ease-out, -webkit-transform .3s ease-out;
+      opacity: 0;
+      transform: translateY(-25%);
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+      padding: 32px;
+      margin: 0 auto;
+
+      h2 {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 19px;
+        margin-bottom: 0;
+      }
+
+      p {
+        font-weight: 400;
+      }
+
+      &.opacitypopup {
+        opacity: 1;
+        transform: translateY(0);
+      }
+
+      div {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin-top: 20px;
+        flex-wrap: wrap;
+        gap: 16px;
+
+        button {
+          font-weight: 700;
+        }
+      }
+    }
+
+    &.opacityModal {
+      opacity: 1;
     }
   }
 }
