--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -27,18 +27,15 @@ p {
   margin: 0;
 }
 
+button {
+  outline: 0;
+  border: 0;
+  background-color: unset;
+}
+
 section.main {
   min-height: 100vh;
-  // padding: 50px 60px 20px;
 
-  // &.modalup {
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  //   background-color: black;
-  // }
 }
 
 .slick-track {
