--- a/src/assets/scss/components/siderbar/_userprofile.scss
+++ b/src/assets/scss/components/siderbar/_userprofile.scss
@@ -7,8 +7,17 @@
   margin-bottom: 20px;
   min-width: 241px;
 
+
+
   p {
     font-size: 16px;
-    line-height: 19px
+
+    line-height: 19px;
+
+    img {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+    }
   }
 }
