--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -121,15 +121,8 @@ button.slick-arrow {
   }
 }
 
-#account-menu {
-  // position: unset;
 
-  .MuiBackdrop-root.MuiBackdrop-invisible.MuiModal-backdrop.css-vl6bb4-MuiBackdrop-root-MuiModal-backdrop {
-    // position: unset;
-  }
-
-  .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation0.MuiPopover-paper.MuiMenu-paper.MuiMenu-paper.css-1gvn426-MuiPaper-root-MuiPopover-paper-MuiMenu-paper {
-    position: absolute;
-    // top: 1138px !important
-  }
+.MuiPopover-root {
+  top: -103px !important;
+  left: 10px !important;
 }
