--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -309,89 +309,7 @@ section.watchlist_page {
 }
 
 // ------------------Editwatchlist_page----------------------//
-.editpage_title {
-  .modalup {
-    display: flex;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 9999;
-    background-color: rgba(0, 0, 0, .5);
-    align-items: center;
-    overflow: hidden;
-    transition: opacity .3s linear;
-    opacity: 0;
-
-
-
-    div#myPopover {
-
-      border-radius: 8px;
-      background-color: aliceblue;
-      color: black;
-      transition: opacity .3s linear, transform .3s ease-out, -webkit-transform .3s ease-out;
-      opacity: 0;
-      transform: translateY(-25%);
-      display: flex;
-      flex-direction: column;
-      gap: 8px;
-      padding: 32px;
-      margin: 0 auto;
-
-      h2 {
-        font-weight: 700;
-        font-size: 24px;
-        line-height: 19px;
-        margin-bottom: 0;
-      }
-
-      p {
-        font-weight: 400;
-      }
-
-      &.opacitypopup {
-        opacity: 1;
-        transform: translateY(0);
-      }
-
-      div {
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        margin-top: 20px;
-        flex-wrap: wrap;
-        gap: 16px;
-
-        button {
-          font-weight: 700;
-          padding: 8px 32px;
-          min-block-size: 48px;
-          background-color: unset;
-          outline: 0;
-          border: 0;
-        }
-
-        button.del_btn {
-
-          border-radius: 6px;
-          text-transform: capitalize;
-          background-color: #F33F3F;
-          border: none;
-          color: #141414;
-          outline: 0;
-          font-size: 16px;
-          line-height: 19px;
-        }
-      }
-    }
-
-    &.opacityModal {
-      opacity: 1;
-    }
-  }
-}
+.editpage_title {}
 
 section.editmovie_list {
 
@@ -438,3 +356,180 @@ section.editmovie_list {
 }
 
 // ------------------Editwatchlist_page----------------------//
+
+// ------------------Popup----------------------//
+
+.modalup {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background-color: rgba(0, 0, 0, .5);
+  align-items: center;
+  overflow: hidden;
+  transition: opacity .3s linear;
+  opacity: 0;
+
+
+
+  #myPopover {
+
+    border-radius: 8px;
+    background-color: aliceblue;
+    color: black;
+    transition: opacity .3s linear, transform .3s ease-out, -webkit-transform .3s ease-out;
+    opacity: 0;
+    transform: translateY(-25%);
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 32px;
+    margin: 0 auto;
+
+    h2 {
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 19px;
+      margin-bottom: 0;
+    }
+
+    p {
+      font-weight: 400;
+    }
+
+    &.opacitypopup {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    div {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      margin-top: 20px;
+      flex-wrap: wrap;
+      gap: 16px;
+
+      button {
+        font-weight: 700;
+        padding: 8px 32px;
+        min-block-size: 48px;
+        background-color: unset;
+        outline: 0;
+        border: 0;
+      }
+
+      button.del_btn {
+
+        border-radius: 6px;
+        text-transform: capitalize;
+        background-color: #F33F3F;
+        border: none;
+        color: #141414;
+        outline: 0;
+        font-size: 16px;
+        line-height: 19px;
+      }
+    }
+  }
+
+  &.opacityModal {
+    opacity: 1;
+  }
+
+  #myPopover2 {
+    position: relative;
+    border-radius: 8px;
+    background-color: #161616;
+    color: #E1E1E1;
+    transition: opacity .3s linear, transform .3s ease-out, -webkit-transform .3s ease-out;
+    opacity: 0;
+    transform: translateY(-25%);
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 32px;
+    margin: 0 auto;
+
+    min-width: 700px;
+
+    p {
+      font-weight: 400;
+
+      span {
+        margin-left: 10px;
+        display: inline-block;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: auto;
+        margin-bottom: 0;
+      }
+    }
+
+
+
+    &.opacitypopup {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+
+
+    .popupList {
+      max-inline-size: 270px;
+
+      ul {
+        max-height: calc(100vh - 24px);
+        overflow-y: auto;
+
+        li {
+          align-self: start;
+          font-size: 16px;
+          line-height: 19px;
+          display: flex;
+          justify-content: start;
+          align-items: center;
+          text-transform: capitalize;
+
+          img {
+            margin-right: 10px;
+          }
+
+          &:not(:last-child) {
+            margin-bottom: 8px;
+          }
+        }
+
+      }
+
+      .customBtn {
+        margin-top: 15px;
+        justify-content: start !important;
+        padding: 8px 12px;
+        column-gap: 16px;
+      }
+
+
+    }
+
+    &>p {
+      margin-bottom: 8px;
+    }
+
+    button.close_btn {
+      cursor: pointer;
+      position: absolute;
+      top: 15px;
+      right: 15px;
+    }
+  }
+
+  &.opacityModal {
+    opacity: 1;
+  }
+}
+
+// ------------------Popup----------------------//
