css respinsivenes in progress

--- a/src/assets/scss/components/_watchlist.scss
+++ b/src/assets/scss/components/_watchlist.scss
@@ -534,3 +534,10 @@ section.editmovie_list {
 }
 
 // ------------------Popup----------------------//
+// ------------------History page----------------------//
+
+section.movies_section.movies_history {
+  margin-top: 40px;
+}
+
+// ------------------History page----------------------//
