--- a/src/assets/scss/components/_sidebar.scss
+++ b/src/assets/scss/components/_sidebar.scss
@@ -1,8 +1,62 @@
+header {
+  display: none;
+
+  @include bp(tablet-sm) {
+    display: block;
+    padding: 12px;
+    position: fixed;
+    height: 60px;
+    top: 0;
+    left: 0;
+    z-index: 12;
+    width: 100%;
+    background-color: $bg-black;
+    border-bottom: 1px solid #e9ecef36;
+
+    nav {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      h1 {
+        width: 100%;
+        text-align: center;
+        font-size: 32px;
+        line-height: 34px;
+        font-family: "Archivo", sans-serif;
+        font-weight: 800;
+        text-transform: capitalize;
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
 aside.sidebar {
   position: relative;
   width: 320px;
   padding: 20px 40px;
   background-color: $bg-black;
+
+  @include bp(tablet-sm) {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: -250px;
+    transition: left 0.3s ease-in-out;
+    height: 100%;
+
+    &.open {
+      left: 0;
+    }
+
+    &.closed {
+      left: -350px;
+    }
+  }
+
+
+
 
   h1 {
     font-size: 40px;
@@ -41,6 +95,11 @@ aside.sidebar {
 
         &:not(:last-child) {
           margin-bottom: 20px;
+
+          @include bp(tablet-sm) {
+            margin-bottom: 7px;
+
+          }
         }
 
 
@@ -59,5 +118,8 @@ aside.sidebar {
   padding: 50px 60px 20px;
   overflow-x: hidden;
 
+  @include bp(tablet-sm) {
+    padding-inline: 30px;
+  }
 
 }
