css edit watchlist page in progres css

--- a/src/assets/scss/components/_button.scss
+++ b/src/assets/scss/components/_button.scss
@@ -19,4 +19,10 @@ button.btn_create {
     color: $magic-black;
 
   }
+
+  @include bp(tablet-sm) {
+    min-width: unset;
+    max-width: 240px;
+    width: 100%;
+  }
 }
