--- a/src/assets/scss/components/form/_formrinputs.scss
+++ b/src/assets/scss/components/form/_formrinputs.scss
@@ -24,7 +24,7 @@
 
       input,
       textarea {
-        border: 1px solid #ffffff;
+        border: 2px solid #414141;
         border-radius: 6px;
         background-color: transparent;
         color: $text-color;
